--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <span class="text-lg font-semibold mr-2 w-24">POSC 588</span>
                                 <span class="flex-1">Collaborative Governance</span>
                                 <div class="flex space-x-2">
-                                    <a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20588%20Collaborative%20Governance/spring%2024/POSC_588_Spring2024.pdf" target="_blank" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-100 dark:bg-green-900/50 text-green-800 dark:text-green-300 hover:bg-green-200 dark:hover:bg-green-900/70 transition-colors">
+                                    <a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20588%20Collab%20Gov/spring_24/POSC_588_Spring24.pdf" target="_blank" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-100 dark:bg-green-900/50 text-green-800 dark:text-green-300 hover:bg-green-200 dark:hover:bg-green-900/70 transition-colors">
                                         <i class="fas fa-file-pdf mr-1"></i> PDF
                                     </a>
                                     <a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20588%20Collab%20Gov" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-200 dark:bg-gray-600 text-gray-700 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-500 transition-colors">
