--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <span class="text-lg font-semibold mr-2 w-24">POSC 315</span>
                                 <span class="flex-1">Introduction to Public Policy</span>
                                 <div class="flex space-x-2">
-                                    <a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20315%20Intro%20Policy/2025%20Summer/posc315_summer_2025.pdf" target="_blank" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-yellow-100 dark:bg-yellow-900/50 text-yellow-800 dark:text-yellow-300 hover:bg-yellow-200 dark:hover:bg-yellow-900/70 transition-colors">
+                                    <a href="https://dadams-au.github.io/syllabi/POSC 315 Intro Policy/2025 Summer/posc315_summer_2025.pdf" target="_blank" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-yellow-100 dark:bg-yellow-900/50 text-yellow-800 dark:text-yellow-300 hover:bg-yellow-200 dark:hover:bg-yellow-900/70 transition-colors">
                                         <i class="fas fa-file-pdf mr-1"></i> PDF
                                     </a>
                                     <a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20315%20Intro%20Policy" class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-200 dark:bg-gray-600 text-gray-700 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-500 transition-colors">
