--- a/index.html
+++ b/index.html
@@ -229,15 +229,23 @@
                         </div>
                     </div>
                     <div class="md:w-1/3 bg-indigo-50 dark:bg-indigo-900/20 p-8 flex items-center justify-center">
-                        <div class="text-center">
-                            <div class="bg-indigo-100 dark:bg-indigo-900 rounded-lg p-6 shadow-md mb-4 transform rotate-2">
-                                <i class="fas fa-file-code text-5xl text-indigo-400 mb-2"></i>
-                                <div class="text-lg font-medium text-gray-800 dark:text-gray-200">syllabus.tex</div>
+                        <div class="text-center space-y-6">
+                            <!-- Decorative TeX file image with icon -->
+                            <div class="relative inline-block">
+                                <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/latex.svg" alt="LaTeX Logo" class="h-20 w-20 mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md border-2 border-indigo-200 dark:border-indigo-700 p-3">
+                                <span class="absolute bottom-2 right-2 bg-indigo-100 dark:bg-indigo-900 rounded-full p-2 shadow">
+                                    <i class="fas fa-file-code text-indigo-500 text-xl"></i>
+                                </span>
                             </div>
-                            <div class="bg-red-100 dark:bg-red-900 rounded-lg p-6 shadow-md transform -rotate-2">
-                                <i class="fas fa-file-pdf text-5xl text-red-400 mb-2"></i>
-                                <div class="text-lg font-medium text-gray-800 dark:text-gray-200">syllabus.pdf</div>
+                            <div class="text-lg font-medium text-gray-800 dark:text-gray-200">syllabus.tex</div>
+                            <!-- Decorative PDF file image with icon -->
+                            <div class="relative inline-block">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF Icon" class="h-20 w-20 mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md border-2 border-red-200 dark:border-red-700 p-3">
+                                <span class="absolute bottom-2 right-2 bg-red-100 dark:bg-red-900 rounded-full p-2 shadow">
+                                    <i class="fas fa-file-pdf text-red-500 text-xl"></i>
+                                </span>
                             </div>
+                            <div class="text-lg font-medium text-gray-800 dark:text-gray-200">syllabus.pdf</div>
                         </div>
                     </div>
                 </div>
@@ -377,8 +385,12 @@
                 </div>
                 <div class="md:w-1/3 bg-gradient-to-br from-purple-500 to-purple-700 dark:from-purple-600 dark:to-purple-800 text-white p-8 flex items-center justify-center">
                     <div class="text-center">
-                        <div class="bg-white dark:bg-gray-700 rounded-full h-24 w-24 flex items-center justify-center mx-auto mb-4 shadow-lg">
+                        <div class="relative bg-white dark:bg-gray-700 rounded-full h-24 w-24 flex items-center justify-center mx-auto mb-4 shadow-lg">
                             <i class="fas fa-user-tie text-4xl text-purple-600 dark:text-purple-400"></i>
+                            <!-- Add a secondary icon in the lower right corner -->
+                            <span class="absolute bottom-2 right-2 bg-purple-100 dark:bg-purple-900 rounded-full p-2 shadow">
+                                <i class="fas fa-comments text-purple-600 dark:text-purple-400 text-xl"></i>
+                            </span>
                         </div>
                         <p class="text-lg font-medium">Connect & Collaborate</p>
                     </div>
