updated json and font

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                     </div>
                 </div>
 
+                <div class="mt-4"> <!-- Year Filters Section -->
+                    <h3 class="font-semibold mb-2">Year</h3>
+                    <div id="year-filters-container">
+                        <p class="text-sm" style="color: var(--fg-alt);">Loading years...</p>
+                    </div>
+                </div>
+
                 <div class="mt-4"> <!-- Course Level Filters Section -->
                     <h3 class="font-semibold mb-2">Course Level</h3>
                     <div id="level-filters-container">
                         <p class="text-sm" style="color: var(--fg-alt);">Loading levels...</p>
-                    </div>
-                </div>
-
-                <div class="mt-4"> <!-- Tags Filters Section -->
-                    <h3 class="font-semibold mb-2">Tags</h3>
-                    <div id="tag-filters-container">
-                        <p class="text-sm" style="color: var(--fg-alt);">Loading tags...</p>
                     </div>
                 </div>
 
