copyright and dadams.io

--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
 
     <footer class="container mx-auto px-4 py-8 text-center mt-12">
         <p class="font-secondary" style="color: var(--accent2);">Browse Course Syllabi</p>
-        <p class="text-sm mt-2">&copy; <span id="copyright-year"></span> RetroModern UI. All Rights Reserved.</p>
-<p class='text-sm mt-4'><a href='template.html' class='hover:text-accent1' style='color: var(--fg); text-decoration: underline;'>View TeX Template</a></p>
-<p class='text-sm mt-2'><a href='https://github.com/dadams-AU/syllabi' target='_blank' rel='noopener noreferrer' class='hover:text-accent1' style='color: var(--fg); text-decoration: underline;'>View Project on GitHub</a></p>
+        <p class="text-sm mt-2">&copy; <span id="copyright-year"></span> David P. Adams. All Rights Reserved.</p>
+        <p class='text-sm mt-4'><a href='template.html' class='hover:text-accent1' style='color: var(--fg); text-decoration: underline;'>View TeX Template</a></p>
+        <p class='text-sm mt-2'><a href='https://github.com/dadams-AU/syllabi' target='_blank' rel='noopener noreferrer' class='hover:text-accent1' style='color: var(--fg); text-decoration: underline;'>View Project on GitHub</a></p>
+        <p class='text-sm mt-2'><a href='https://dadams.io' target='_blank' rel='noopener noreferrer' class='hover:text-accent1' style='color: var(--fg); text-decoration: underline;'>Visit My Homepage</a></p>
     </footer>
 
     <script>
