updated link to template repo

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <ul>
                 <li><i class="fas fa-globe"></i> <strong>Browse syllabi on the web:</strong> <a href="https://syllabi.dadams.io">https://syllabi.dadams.io</a></li>
                 <li><i class="fas fa-laptop-code"></i> <strong>This repository:</strong> <a href="https://github.com/dadams-AU/syllabi">https://github.com/dadams-AU/syllabi</a></li>
-                <li><i class="fas fa-toolbox"></i> <strong>Template (bundled here):</strong> <a href="template/">template/</a></li>
-                <li><i class="fas fa-rotate"></i> <strong>Upstream template source:</strong> <a href="https://github.com/CSUF-MPA/csuf-syllabus">https://github.com/CSUF-MPA/csuf-syllabus</a> (reference)</li>
+                <li><i class="fas fa-toolbox"></i> <strong>Template (bundled here):</strong> <a href="/template/">template/</a></li>
+                <li><i class="fas fa-rotate"></i> <strong>Upstream template source:</strong> <a href="https://github.com/dadams-AU/csuf-syllabus">https://github.com/dadams-AU/csuf-syllabus</a> (reference)</li>
             </ul>
         </section>
 
