fixed Available Sylabi section

--- a/index.html
+++ b/index.html
@@ -35,15 +35,30 @@
             
             <h3><i class="fas fa-graduation-cap"></i> Undergraduate</h3>
             <ul>
-                <li><a href="POSC%20315%20Intro%20Policy/"><strong>POSC 315</strong> · Introduction to Public Policy</a></li>
-                <li><a href="CRJU_POSC%20320%20Intro%20PA/"><strong>POSC/CRJU 320</strong> · Introduction to Public Administration</a></li>
+                <li><strong>POSC 315</strong> · Introduction to Public Policy 
+                    [<a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20315%20Intro%20Policy">folder</a>] 
+                    [<a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20315%20Intro%20Policy/2025-26%20Fall/posc315_2025_fall.pdf">latest PDF</a>]
+                </li>
+                <li><strong>POSC/CRJU 320</strong> · Introduction to Public Administration 
+                    [<a href="https://github.com/dadams-AU/syllabi/tree/main/CRJU_POSC%20320%20Intro%20PA">folder</a>] 
+                    [<a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/CRJU_POSC%20320%20Intro%20PA/2025%20Summer/CRJU-POSC_320.pdf">latest PDF</a>]
+                </li>
             </ul>
 
             <h3><i class="fas fa-graduation-cap"></i> Graduate (MPA)</h3>
             <ul>
-                <li><a href="POSC%20509%20MPA%20Foundations/"><strong>POSC 509</strong> · Foundations of Public Administration</a></li>
-                <li><a href="POSC%20521%20MPA%20Capstone/"><strong>POSC 521</strong> · Public Administration Theory (MPA Capstone)</a></li>
-                <li><a href="POSC%20588%20Collab%20Gov/"><strong>POSC 588</strong> · Collaborative Governance</a></li>
+                <li><strong>POSC 509</strong> · Foundations of Public Administration 
+                    [<a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20509%20MPA%20Foundations">folder</a>] 
+                    [<a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20509%20MPA%20Foundations/spring%2024/POSC_509_Spring24.pdf">latest PDF</a>]
+                </li>
+                <li><strong>POSC 521</strong> · Public Administration Theory (MPA Capstone) 
+                    [<a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20521%20MPA%20Capstone">folder</a>] 
+                    [<a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20521%20MPA%20Capstone/2025-26%20Fall/POSC521_2025_fall.pdf">latest PDF</a>]
+                </li>
+                <li><strong>POSC 588</strong> · Collaborative Governance 
+                    [<a href="https://github.com/dadams-AU/syllabi/tree/main/POSC%20588%20Collab%20Gov">folder</a>] 
+                    [<a href="https://raw.githubusercontent.com/dadams-AU/syllabi/main/POSC%20588%20Collab%20Gov/spring_24/POSC_588_Spring24.pdf">latest PDF</a>]
+                </li>
             </ul>
         </section>
 
